# storefront

./: pyproject.toml
playground/: views.py
store/: models.py
store/migrations/: 0001_initial.py  0002_auto_20250710_2346.py  0002_rename_price_to_unit_price.py  0003_add_slug_to_product.py  0004_customer_store_custo_last_na_e6a359_idx_and_more.py
storefront/: settings.py  urls.py
