[project]
name = "storefront"
version = "0.1.0"
description = ""
authors = [
    {name = "Ephrem Mekonnen",email = "ephrem8118@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
